--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-production": "vite build --mode production",
+    "build-staging": "vite build --mode staging",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sunroad",
