--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "build": "vite build",
     "build-production": "vite build --mode production",
     "build-staging": "vite build --mode staging",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "author": "sunroad",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^3.1.8"
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3"
   }
 }
